components/ZETA_Guard/envoy/envoy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-pep
  namespace: vsdm2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: envoy-pep
  template:
    metadata:
      labels:
        app: envoy-pep
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.31-latest
        ports:
        - containerPort: 10000
          name: http
        volumeMounts:
        - name: envoy-config-vol
          mountPath: /etc/envoy
          readOnly: true
      volumes:
      - name: envoy-config-vol
        configMap:
          name: envoy-config
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-pep-svc
  namespace: vsdm2
spec:
  selector:
    app: envoy-pep
  ports:
  - protocol: TCP
    port: 80
    targetPort: 10000
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: vsdm2
data:
  envoy.yaml: |
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 10001
    static_resources:
      listeners:
      - address:
          socket_address:
            address: "0.0.0.0"
            port_value: 10000
        traffic_direction: OUTBOUND
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              tracing:
                provider:
                  name: envoy.tracers.opentelemetry
                  typed_config:
                    "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                    grpc_service:
                      envoy_grpc:
                        cluster_name: opentelemetry-collector
                      timeout: 0.250s
                    service_name: envoy-pep-svc
              codec_type: AUTO
              stat_prefix: ingress_http
              http_filters:
              - name: envoy.filters.http.router
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
              route_config:
                name: pep_route
                virtual_hosts:
                - name: pep
                  domains:
                  - "*"
                  routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: rs-cluster
                    decorator:
                      operation: routeToRS
      clusters:
      - name: rs-cluster
        connect_timeout: 0.25s
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: rs-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: "rs-vsdm2-app-svc.vsdm2.svc.cluster.local"
                    port_value: 8080
      - name: opentelemetry-collector
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
        load_assignment:
          cluster_name: opentelemetry-collector
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: otel-collector-svc.vsdm2.svc.cluster.local
                    port_value: 4317
